<resources>
    <string name="app_name">Project 03</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_string">Denver - 78.6°F</string>
    <string name="dummy_text_1">FIND YOUR NEXT HOT SPOT</string>
    <string name="dummy_text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempo.</string>
    <string name="app_logo">TRVL</string>
    <string name="museums">Museums</string>
    <string name="attractions">Attractions</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="card_count">1</string>
    <string name="location_name">Location Name</string>
    <string name="location_phone">Location Phone</string>
    <string name="location_website">Location Website</string>
    <string name="shops">Shops</string>
    <string name="bars">Bars</string>
</resources>