<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/general_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.TopMenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_slab_bold"
            android:letterSpacing=".1"
            android:text="@string/app_logo"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- TODO: Update blank fragment layout -->
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <!--
            TODO-Complete: Add the buttons to the HorizontalScrollView.
            These buttons will be used to filter the list of places on calling the API.
            -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_1"
                    style="@style/topFragmentButton"
                    android:text="@string/restaurants"
                    app:cornerRadius="20dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_2"
                    style="@style/topFragmentButton"
                    android:text="@string/hotels"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_3"
                    style="@style/topFragmentButton"
                    android:text="@string/bars"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_4"
                    style="@style/topFragmentButton"
                    android:text="@string/museums"
                    app:cornerRadius="20dp" />

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</FrameLayout>